--- a/templates/pt-br/mesa.html
+++ b/templates/pt-br/mesa.html
@@ -2,41 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
+
     <!--Título sugerido-->
-    <title>Mesa</title>
+    <title>Mesa - SysBar</title>
+
     <!--Jquery-->
-    <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/jquery-3.2.1.min.js') }}"></script>
+
     <!--Materialize-->
-    <script src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='v1/css/materialize.min.css') }}"  media="screen,projection"/>
+    <script type="text/javascript" src="{{ url_for('static', filename='v1/js/materialize.min.js') }}"></script>
+
     <!--Ícones-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='icons/google/material/iconfont/material-icons.css') }}">
+    <link href="{{ url_for('static', filename='v1/icons/google/material/iconfont/material-icons.css') }}" rel="stylesheet">
+
     <!--Otimizado para mobile-->
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+
     <!--Meu CSS-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/chat.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/image.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/mesa.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/niveis.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/paraimg.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='v1/css/paraimg.css') }}">
+
     <!--Init-->
-    <script src="{{ url_for('static', filename='js/nav.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/niver.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/select.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/autoc.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/chart.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/paraimg.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/nav.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/niver.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/select.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/autoc.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/paraimg.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/chart.min.js') }}"></script>
   </head>
   <body>
     <header>
       <nav>
         <div class="nav-wrapper red darken-4">
-          <a href="{{ url_for('index') }}" class="brand-logo">SysBar</a>
+          <a href="{{ url_for('index') }}" class="brand-logo">Mesa</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
+            <li><a href="{{ url_for('login') }}"><i class="material-icons left">build</i>Login|Cadastrar-se</a></li>
             <li><a href="{{ url_for('about') }}"><i class="material-icons left">description</i>Sobre</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
+            <li><a href="{{ url_for('login') }}"><i class="material-icons left">build</i>Login|Cadastrar-se</a></li>
             <li><a href="{{ url_for('about') }}"><i class="material-icons left">description</i>Sobre</a></li>
           </ul>
         </div>
@@ -44,20 +49,21 @@
     </header>
   <div class="numero_mesa">
     <div class="row">
-      <form class="col s12" style="margin-top:60px">
+      <form class="col s12">
         <div class="row">
+          <br><br><br>
           <div class="input-field col s12">
             <i class="material-icons prefix">bookmark</i>
             <input id="number" type="number" class="validate">
-            <label for="number" >Número da mesa</label>
+            <label for="number">Número da mesa</label>
           </div>
         </div>
       </form>
     </div>
     <div class="row">
       <p id="rStatus" style="display: none;"></p>
-    <script src="{{ url_for('static', filename='sysbar-js/submit.js') }}"></script>      
-      <a id="sb_loading" class="waves-effect waves-light btn col s6 offset-s3 red lighten-1" onClick="submit_table('{{ url_for('api_set_table') }}');">Confirmar</a>
+      <script src="{{ url_for('static', filename='v1/sysbar-js/submit.js') }}"></script>
+      <a class="waves-effect waves-light btn col s6 offset-s3 red lighten-1" onClick="submit_table('{{ url_for('api_set_table') }}');">Confirmar</a>
     </div>
   </div>
   </div>
