--- a/templates/pt-br/perfil.html
+++ b/templates/pt-br/perfil.html
@@ -4,42 +4,38 @@
     <meta charset="utf-8">
 
     <!--Título sugerido-->
-    <title>Pão e Cia</title>
+    <title>SysBar</title>
 
     <!--Jquery-->
-    <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/jquery-3.2.1.min.js') }}"></script>
 
     <!--Materialize-->
-    <script src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='v1/css/materialize.min.css') }}"  media="screen,projection"/>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 
     <!--Ícones-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='icons/google/material/iconfont/material-icons.css') }}">
+    <link href="{{ url_for('static', filename='v1/icons/google/material/iconfont/material-icons.css') }}" rel="stylesheet">
 
     <!--Otimizado para mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!--Meu CSS-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/chat.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/image.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/mesa.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/niveis.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/paraimg.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='v1/css/image.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='v1/css/niveis.css') }}">
 
     <!--Init-->
-    <script src="{{ url_for('static', filename='js/nav.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/niver.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/select.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/autoc.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/chart.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/paraimg.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/nav.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/niver.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/select.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/autoc.js') }}"></script>
+    <script src="{{ url_for('static', filename='v1/js/chart.min.js') }}"></script>
   </head>
   <body>
 
     <header>
       <nav>
         <div class="nav-wrapper red darken-4">
-          <a href="{{ url_for('index') }}" class="brand-logo">Pão&#38;Cia</a>
+          <a href="{{ url_for('index') }}" class="brand-logo">SysBar</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('profile') }}"><i class="material-icons left">account_circle</i>Seu perfil</a></li>
@@ -101,7 +97,6 @@
 
     </div>
 
-
     <br>
     <div class="compras_recentes_semana">
       <div class="title_recents flow-text center-align">
@@ -150,7 +145,6 @@
 
       </div>
     </div>
-
 
     <br>
     <div class="compras_recentes_mes">
@@ -303,7 +297,7 @@
     <div class="history_p">
       <br>
       <p class="flow-text center-align">
-        Ver: <a href="#">histórico de compras</a>
+        Ver: <a href="historico.html">histórico de compras</a>
       </p>
     </div>
     <div class="seus_dados">
@@ -311,8 +305,5 @@
         Ver: <a href="dados.html">seus dados</a>
       </p>
     </div>
-
-
-
   </body>
 </html>
